dark mode + mobile fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,7 @@
 :root {
   --background-body: #fff;
   --text-main: #36393b;
+  --text-inverse: #36393b;
   --text-secondary: #6b6f72;
   --primary-color: #548e9b;
   --font-family-serif: Merriweather, serif;
@@ -10,6 +11,7 @@
 :root.theme-dark {
   --background-body: #202122;
   --text-main: #fff;
+  --text-inverse: #36393b;
   --text-secondary: #ccc;
   --primary-color: #548e9b;
 }
